force-app/main/default/objects/Billing__c/Billing__c.object-meta.xml
<CustomObject>
    <label>請求</label>
    <nameField>
        <displayFormat>{YY}{MM}-{000000}</displayFormat>
        <label>請求番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>