force-app/main/default/objects/Billing__c/fields/AmountBilled__c.field-meta.xml
<CustomField>
    <fullName>AmountBilled__c</fullName>
    <label>請求額</label>
    <summarizedField>BillingDetail__c.AmountBilled__c</summarizedField>
    <summaryForeignKey>BillingDetail__c.Billing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>