force-app/main/default/objects/Billing__c/fields/ApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDate__c</fullName>
    <label>承認日</label>
    <type>Date</type>
</CustomField>