force-app/main/default/objects/Billing__c/fields/BillingPartner__c.field-meta.xml
<CustomField>
    <fullName>BillingPartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>請求先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>請求</relationshipLabel>
    <relationshipName>Billings</relationshipName>
    <type>Lookup</type>
</CustomField>