force-app/main/default/objects/Billing__c/fields/IsAwaitingConfirmation__c.field-meta.xml
<CustomField>
    <fullName>IsAwaitingConfirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>承認済み</label>
    <type>Checkbox</type>
</CustomField>