force-app/main/default/objects/Billing__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <label>備考</label>
    <type>TextArea</type>
</CustomField>