force-app/main/default/objects/Billing__c/fields/PaymentDueDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDueDate__c</fullName>
    <label>支払期日</label>
    <type>Date</type>
</CustomField>