force-app/main/default/objects/Billing__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>進捗</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新規</fullName>
            </value>
            <value>
                <fullName>請求済</fullName>
            </value>
            <value>
                <fullName>入金済</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>