force-app/main/default/objects/Billing__c/listViews/AllView.listView-meta.xml
<ListView>
    <fullName>AllView</fullName>
    <columns>NAME</columns>
    <columns>BillingPartner__c</columns>
    <columns>Status__c</columns>
    <columns>PaymentDueDate__c</columns>
    <columns>IsAwaitingConfirmation__c</columns>
    <columns>ApprovalDate__c</columns>
    <columns>AmountBilled__c</columns>
    <columns>BillingDate__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>すべて</label>
</ListView>